--- a/Ejercicio2/local.properties
+++ b/Ejercicio2/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Oct 05 17:20:53 CEST 2022
-sdk.dir=/home/carpui/Android/Sdk
+#Tue Dec 06 20:19:37 CET 2022
+sdk.dir=C\:\\Users\\carlo\\AppData\\Local\\Android\\Sdk
