--- a/Ejercicio5/local.properties
+++ b/Ejercicio5/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Nov 02 17:14:32 CET 2022
-sdk.dir=/home/carpui/Android/Sdk
+#Tue Dec 06 20:58:28 CET 2022
+sdk.dir=C\:\\Users\\carlo\\AppData\\Local\\Android\\Sdk
