Ejercicio 9 no terminado

--- a/Ejercicio9/local.properties
+++ b/Ejercicio9/local.properties
@@ -5,4 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Sun Dec 04 15:30:21 CET 2022
-sdk.dir=C\:\\Users\\carlo\\AppData\\Local\\Android\\Sdk
+sdk.dir=/home/carpui/Android/Sdk/
