--- a/Ejercicio4/local.properties
+++ b/Ejercicio4/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Oct 27 19:45:24 CEST 2022
-sdk.dir=/home/carpui/Android/Sdk
+#Thu Dec 08 21:53:47 CET 2022
+sdk.dir=F\:\\skd
