--- a/Ejercicio6/local.properties
+++ b/Ejercicio6/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Nov 02 17:19:35 CET 2022
-sdk.dir=/home/carpui/Android/Sdk
+#Thu Dec 08 21:55:03 CET 2022
+sdk.dir=F\:\\skd
