--- a/Ejercicio9/local.properties
+++ b/Ejercicio9/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Dec 04 15:30:21 CET 2022
-sdk.dir=/home/carpui/Android/Sdk/
+#Thu Dec 08 19:38:18 CET 2022
+sdk.dir=F\:\\skd
